# isbn-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml  update_on_upstream.yml  update_on_upstream_change.yml
benches/: bench_calculate_check_digit.rs  bench_convert.rs  bench_hyphenate_reader.rs  bench_isbn_ranges.rs  bench_new.rs
src/: lib.rs  range.rs
