[package]
name = "isbn"
version = "0.4.1"
authors = ["Jihyeok Seo <ji@hyeok.org>", "Philippe Solodov <solop1906@gmail.com>"]
description = "A library for handling ISBNs."
license = "MIT"
repository = "https://github.com/limeburst/isbn-rs"
edition = "2021"

[build-dependencies]
codegen = "0.1"
roxmltree = "0.14.1"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
quick-xml = { version = "0.22.0", optional = true }
indexmap = { version = "1.7.0", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
runtime-ranges = ["quick-xml", "indexmap"]
serialize = ["serde"]
