[package]
name = "isbn"
version = "0.7.0"
authors = ["Jihyeok Seo <ji@hyeok.org>", "Philippe Solodov <solop1906@gmail.com>"]
description = "A library for handling ISBNs."
license = "MIT"
repository = "https://github.com/limeburst/isbn-rs"
edition = "2021"
rust-version = "1.82.0" 

[build-dependencies]
codegen = "0.3.0"
roxmltree = "0.14.1"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
quick-xml = { version = "0.38.4", optional = true }
indexmap = { version = "2.12.1", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
runtime-ranges = ["quick-xml", "indexmap"]
serialize = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
